Removed references to testng